Fixed bug with overflow-y in header nav

--- a/www/assets/css/index.css
+++ b/www/assets/css/index.css
@@ -1342,6 +1342,7 @@ Header module
     background: #4180ff;
     width: 100%;
     overflow: auto;
+    overflow-y: hidden;
     display: -webkit-box;
     display: -moz-box;
     display: box;
